# online-store

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/db/: base.py  database.py  models_db.py
app/models/: cart_item.py  category.py  order.py  order_item.py  product.py  user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 003ab4c9ce12_initial_migration_with_all_tables.py  9a29e62a6e0c_init_tables.py  c047d196e87e_remove_test_table.py
